--- a/site/app/views/applications/index.html.haml
+++ b/site/app/views/applications/index.html.haml
@@ -3,6 +3,8 @@
 
 = breadcrumbs_for_each [link_to ('My Applications', :applications, :action => :index)]
 
+- content_for :dark_layout, true
+
 %section#console-mast
   .row
     %ul.unstyled-flat
