--- a/site/app/views/styleguide/app-config.html
+++ b/site/app/views/styleguide/app-config.html
@@ -83,10 +83,10 @@
     
     
     
-    <div class='simple-content' id='content'>
+    <div class='section-console section-console-light' id='content'>
       <div class='container'>
-        <div class='row-content'>
-          <div id="console-panel" class='row row-flush-right light'>
+        <div class='row-console'>
+          <div class='row row-flush-right'>
             <div class='column-content grid-wrapper'>
             
             
