--- a/site/app/views/styleguide/cart-details.html
+++ b/site/app/views/styleguide/cart-details.html
@@ -89,10 +89,10 @@
     
     
     
-    <div class='section-striped' id='content'>
+    <div class='section-console' id='content'>
       <div class='container'>
-        <div class='row-content'>
-          <div id="console-panel" class='row row-flush-right'>
+        <div class='row-console'>
+          <div class='row row-flush-right'>
             <div class='column-content grid-wrapper'>
             
             <div class='ribbon'>
