--- a/site/app/views/applications/show.html.haml
+++ b/site/app/views/applications/show.html.haml
@@ -1,3 +1,4 @@
+- content_for :full_layout, true
 - content_for :dark_layout, true
 
 = breadcrumbs_for_each [link_to('My applications', :applications, :action => :index), @application.name]
