--- a/site/app/stylesheets/console.scss
+++ b/site/app/stylesheets/console.scss
@@ -8,6 +8,7 @@
 @import "mixins";
 @import "bootstrap/dropdowns";
 @import "console/navbar";
+@import "console/help";
 
 /*------------------------------------------------------
 	 Console specific styles
@@ -590,6 +591,10 @@ figure {
     white-space: nowrap;
     }
 
+#footer-nav {
+  background: #070707;
+}
+
 .row-console > .row {
   background: #010101;
   background-image: -webkit-gradient(linear, center top, center bottom, from(#050505 88%), to(#010101));
@@ -610,41 +615,12 @@ figure {
 	}
 }
 
-.row-console-help > .row {
-	background-color: #070707;
-	padding-top: 40px;
-  padding-bottom: 30px;
-
-  p {
-  	color: #808080;
-	}
-  h4 {
-  	text-transform: uppercase;
-  	font-size: 100%;
-  	color: #707070;
-  	padding-bottom: 4px;
-	}
-	a {
-		font-size: 22px;
-		color: #EB0011;
-		font-weight: 200;
-		}
-}
-
 @media (max-width: 767px) {
   .section-console { 
     background: #010101;
     padding-bottom: 0;
   }
   .section-console-light { background: #292929; }
-  .container .row-console-help {
-    > .row {
-      background: transparent;
-    }
-    .column-console-help {
-      @include expand_for_phone();
-    }
-  }
 }
 
 .app-block {
@@ -712,10 +688,6 @@ figure {
     	margin: 0 -25px;
     	padding: 20px 25px;
     	}
-
-footer{
-  background: #101010;
-}
 
 #app-list, #account-digest {
  margin-top: 3px /*.*/;
@@ -1187,15 +1159,6 @@ section#app-cartridges .cartridge-block {
     	border-left: 0;
     	border-top: 0; 
     	}
-/*	#help ul li {
-		margin-left:0;
-		margin-right: 30px;
-		margin-bottom: 10px;
-		border-bottom: 1px dotted;
-		border-right: 0;
-		width: 100%;
-		float: none;
-		}*/
 	.ribbon .more a {
     border-width: 2.1em 0 2.1em 2.1em;
     }
