--- a/site/app/views/layouts/console.html.haml
+++ b/site/app/views/layouts/console.html.haml
@@ -45,9 +45,9 @@
                   = flashes
                   = yield
 
-        = yield :after
-
     %footer
+      = yield :footer
+
       = render 'layouts/footer'
 
     = render 'layouts/javascripts'
