Fixes duplicate arrows for external links on wiki

--- a/site/app/stylesheets/_type.scss
+++ b/site/app/stylesheets/_type.scss
@@ -45,6 +45,9 @@ footer h3 {
 a.external:after { 
   content: " \279A"; 
 }
+a.external img[alt="external"] {
+  display: none;  
+}
 
 p.larger { 
   font-size: 14px; 
