--- a/site/app/stylesheets/console.scss
+++ b/site/app/stylesheets/console.scss
@@ -163,7 +163,6 @@ body {
 }
 
 
-/* overwrite font styles */
 .section-console label {
 	color: #cfcfcf;
 	}
@@ -175,6 +174,7 @@ input, textarea {
 	}
   input:focus, textarea:focus {
     background: #eee; color: #000;
+  	box-shadow: none;
     }
 
 .input-prepend .add-on, .input-append .add-on, .input-prepend-append .add-on-first, .input-prepend-append .add-on-last {
