Lots of cleanup of getting started and next steps

--- a/site/app/stylesheets/_mixins.scss
+++ b/site/app/stylesheets/_mixins.scss
@@ -6,3 +6,7 @@
   padding-left: $gridGutterWidthPhone;
   padding-right: $gridGutterWidthPhone;
 }
+
+@mixin font-family-monospace() {
+  font-family: Menlo, Monaco, "Liberation Mono", Consolas, monospace;
+}
