--- a/site/app/views/layouts/console.html.haml
+++ b/site/app/views/layouts/console.html.haml
@@ -29,7 +29,7 @@
 
           - elsif content_for? :breadcrumbs
             .row.row-flush-right
-              .grid-wrapper
+              .column-content.grid-wrapper
                 .ribbon
                   .ribbon-content
                     %nav
