--- a/site/app/views/product/getting_started.html.haml
+++ b/site/app/views/product/getting_started.html.haml
@@ -130,6 +130,7 @@
               %pre $ gem install rhc
 
     .span12
+      = link_to 'Read the Getting Started guide for more installation help', getting_started_guide_url, :class => 'action-more'
       = link_to 'Installing OpenShift client tools video walkthrough', local_video_url('express_client_tools'), :class => 'action-more'
 
 %section#create_domain_name
