--- a/site/app/stylesheets/_code.scss
+++ b/site/app/stylesheets/_code.scss
@@ -1,11 +1,9 @@
 pre {
-	-webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0;
-	}
+  @include border-radius(0);
+}
 
 pre.cli {
 	color: $cliText;
 	background-color: $cliBackground;
 	border: none;
-	}
+}
