--- a/site/app/views/applications/index.html.haml
+++ b/site/app/views/applications/index.html.haml
@@ -1,5 +1,4 @@
 - lots_of_applications = @applications.length > 10
-- application_partial = lots_of_applications ? 'applications/application_compact' : 'applications/application_overview'
 
 = breadcrumbs_for_each [link_to ('My Applications', :applications, :action => :index)]
 
@@ -53,16 +52,15 @@
     .app-block.base
       .row
         %a{:href => application_path(application)}
-          %span.span1
+          -#%span.span1
             &nbsp;
             -# app type icon placeholder
-          %span.span4
+          %span.span4.offset1
             %h2= application.name
             .app-full-path
               = application.web_url
           %span.span2
-            .emblem
-            -#
+            -#.emblem
               %img{:src => "/app/images/console/gear-bars.png"}
               %span.gear-numbers
                 -# gear number placeholder
