--- a/site/app/views/cartridge_types/index.html.haml
+++ b/site/app/views/cartridge_types/index.html.haml
@@ -6,28 +6,31 @@
     We will be adding support shortly!
     In the mean time, some are available as standalone applications.
 -else
-  %p
-    Choose a cartridge to add to your application.
 
 %section.row
-  - @cart_types.in_groups(3, false).each do |types|
-    .span4
-      = render :collection => types, :partial => 'cartridge_types/cartridge_type'
-  - if @cart_types.empty?
+  - if @carts.empty?
     .alert.alert-info There are no cartridges that can be installed
 
-%section.row
-  - unless @installed_cart_types.empty?
-    .span6
-      %h2 Installed cartridges
-      = render :collection => @installed_cart_types, :partial => 'cartridge_types/cartridge_type', :locals => {:inactive => true}
+  - else
+    .span8
+      %p Choose a cartridge to add to your application.
+      .row
+        - @carts.in_groups(2, false).each do |types|
+          .span4
+            = render :collection => types, :partial => 'cartridge_types/cartridge_type'
 
-  - unless @requires_cart_types.empty? and @conflicts_cart_types.empty? and @blocked_cart_types.empty?
-    .span6
-      %h2 Cartridges that cannot be installed
-      = render :collection => @requires_cart_types, :partial => 'cartridge_types/cartridge_type', :locals => {:inactive => true, :reason => :requires}
-      = render :collection => @conflicts_cart_types, :partial => 'cartridge_types/cartridge_type', :locals => {:inactive => true, :reason => :conflicts}
-      = render :collection => @blocked_cart_types, :partial => 'cartridge_types/cartridge_type', :locals => {:inactive => true, :reason => :blocked}
+
+  - unless @installed.empty? and @requires.empty? and @conflicts.empty? and @blocked.empty?
+    .span4
+      - unless @installed.empty?
+        %h3 Installed
+        = render :collection => @installed, :partial => 'cartridge_types/cartridge_type', :locals => {:inactive => true, :reason => :installed}
+
+      - unless @requires.empty? and @conflicts.empty? and @blocked.empty?
+        %h3 Has Dependencies
+        = render :collection => @requires, :partial => 'cartridge_types/cartridge_type', :locals => {:inactive => true, :reason => :requires}
+        = render :collection => @conflicts, :partial => 'cartridge_types/cartridge_type', :locals => {:inactive => true, :reason => :conflicts}
+        = render :collection => @blocked, :partial => 'cartridge_types/cartridge_type', :locals => {:inactive => true, :reason => :blocked}
 
 - content_for :javascripts do
   :javascript
