--- a/site/app/views/cartridges/next_steps.html.haml
+++ b/site/app/views/cartridges/next_steps.html.haml
@@ -19,11 +19,11 @@
       %strong rhc.
       Whether it's adding cartridges, checking uptime, or pulling log files from
       the server, you can quickly put a finger on the pulse of your application.
-      = link_to "Follow these steps to install the client", install_cli_knowledge_base_url
+      #{link_to "Follow these steps to install the client", getting_started_path(:anchor => 'install_client_tools')}
       on Linux, Mac OS X, or Windows.
     %p
       After installing the command line tool follow our User Guide
-      = link_to "on how to manage your cartridges from the command line", manage_cartridges_user_guide_topic_url
+      #{link_to "on how to manage your cartridges from the command line", manage_cartridges_user_guide_topic_url}
 
     %p
       You can get a list of cartridges by running
