Bug 814575 - Developers link is missing

--- a/site/app/views/layouts/console/_header.html.haml
+++ b/site/app/views/layouts/console/_header.html.haml
@@ -28,7 +28,7 @@
     %ul.navbar-text.pull-right#utility-nav
       %li= link_to "Status", status_url, :title => 'Track open issues on the OpenShift status page', :id => 'outage', :class => 'btn btn-warning btn-small', :style => 'display:none;'
       %li= link_to "Community", community_url
-      %li= link_to "Developer Center", "#"
+      %li= link_to "Developer Center", developers_url
 
     %ul#identity.pull-right
       %li.dropdown.username
