--- a/site/app/views/user/new.html.haml
+++ b/site/app/views/user/new.html.haml
@@ -2,7 +2,7 @@
 
 #new-user
   = semantic_form_for @user, :url => account_path, :simple => true, :html => {:class => 'form-horizontal'} do |form|
-    %input{:type => "hidden", :name => "redirectUrl", :value => (defined?(@redirectUrl) ? @redirectUrl : '/app/user/complete') }
+    %input{:type => "hidden", :name => "redirect", :value => @redirect }
     = form.hidden_field :cloud_access_choice, :value => CloudAccess::EXPRESS
     = form.semantic_errors
     = form.inputs do
