isolate column-content div only

--- a/site/app/stylesheets/_community.scss
+++ b/site/app/stylesheets/_community.scss
@@ -113,10 +113,10 @@
 	}
 }
 
-.views-field-name,
-.views-field-phpcode,
-.views-field-value,
-.views-field-phpcode-1 {
+.community .column-content .views-field-name,
+.community .column-content .views-field-phpcode,
+.community .column-content .views-field-value,
+.community .column-content .views-field-phpcode-1 {
 	margin-left: 60px;
 }
 .views-field-name {
