--- a/site/app/stylesheets/_community.scss
+++ b/site/app/stylesheets/_community.scss
@@ -4,7 +4,6 @@
 
 /* Drupal specific markup, we may want to wrap this with a top level selector on body.drupal or something */
 .views-field-rss { float: right; }
-.views-field-title { font-size: 16px; line-height: 20px; }
 .views-field-picture { float: left; margin-right: 6px; }
 .view-forum-list .views-field-picture { float: right; margin-left: 6px; }
 .block-stats div { display: inline; }
@@ -15,7 +14,7 @@
   h4 { display: inline; color: #666; font-size: 13px; line-height: 18px; }
   a { text-decoration: underline; }
   span.views-field-title { display: block; }
-  > div { margin-bottom: 15px; }
+  > div { margin-bottom: 35px; }
   .block-stats { clear: both; }
 }
 .column-nav .picture img {
@@ -37,7 +36,7 @@
   .view-user-profile-box { margin-bottom: 20px; }
 }
 
-.community textarea {
+.community textarea, .community input {
   width: 100%;
 }
 
@@ -51,6 +50,8 @@
   margin-bottom: 25px;
 
   > h2 { line-height: 25px; }
+  
+  > .teaser {margin:20px; }
 
   > .breadcrumb {
     margin-bottom: 5px;
@@ -113,6 +114,9 @@
 	}
 }
 
+.community .column-content {
+	min-height: 712px;
+	}
 .community .column-content .views-field-name,
 .community .column-content .views-field-phpcode,
 .community .column-content .views-field-value,
@@ -126,7 +130,8 @@
 .community .thread .thread-author .views-field-name {
 	font-size: inherit;
 }
-.column-content .picture img {
+.column-content .picture img,
+.community .field_author_image_fid {
   border: 4px solid #000;
 }
 
@@ -313,11 +318,17 @@ html.js fieldset.collapsible .fieldset-wrapper {
  	vertical-align: bottom;
  	margin: 0;
  }
-.community .meta .view-user-profile-box div.view div.views-hide-hover, 
-.community .meta .view-user-profile-box div.view:hover div.views-hide {
+.community div.view:hover div.views-hide, 
+.community div.view div.views-hide-hover {
   display: inline-block;
   position: relative;
   z-index: 200;
+}
+.community div.view div.views-admin-links {
+    font-size: xx-small;
+    margin-right: 0;
+    margin-top: -20px;
+    float: right;
 }
 .community .meta .view-user-profile-box .views-admin-links {
 	background: #fff;
@@ -330,8 +341,8 @@ html.js fieldset.collapsible .fieldset-wrapper {
     display: none;
     float: right;
 }
-div.view:hover div.views-hide {
-    margin-top: 0 !important;
+.community div.view:hover div.views-hide {
+    margin-top: -20px;
 }
 .community .meta .view-user-profile-box > div {
 	border: 1px solid #666;
@@ -352,7 +363,7 @@ div.view:hover div.views-hide {
 .comment-content {
 	border: 1px solid #ddd;
 	padding: 20px 25px;
-	margin: 5px 0;
+	margin: 5px 0 0 0;
 	overflow: hidden;
 }
 .b-edge {
@@ -395,6 +406,48 @@ div.view:hover div.views-hide {
 }
 
 
+/* Blog pages */
+
+.community .geshifilter pre {
+	border:0;
+	}
+.community .node-blog .author-bio-box {
+  border-bottom: 1px solid #111;
+	}
+.community .node-blog > h2+p {
+	margin: 0;
+	}
+	
+
+/* Community search */
+.community .search-results dt {
+    font-size: 16px;
+    margin: 23px 0 0;
+}
+.community .search-results dt a {
+	font-weight: normal;
+	text-decoration: underline;
+	}
+.community .search-results dd {
+	margin-left:0;
+	margin-bottom: 2em;
+	}
+.community .search-results p {
+	margin: 0 0 3px 0;
+	}
+.community .search-results .search-info {
+  color: #9F9F9F;
+}
+
+/* FAQs */
+
+.faq-category-group {
+	margin-bottom: 15px;
+	}
+.faq-header {
+	font-size: 18px;
+	}
+	
 /* Wiki pages */
 #toc { float: right; background: #eee; border: 1px solid #ddd; margin-left: 15px; margin-bottom: 15px; }
 #toc td { font-size: 90%; }
