Added styles for the ToC of wiki pages

--- a/site/app/stylesheets/_community.scss
+++ b/site/app/stylesheets/_community.scss
@@ -452,6 +452,6 @@ html.js fieldset.collapsible .fieldset-wrapper {
 /* Wiki pages */
 #toc { float: right; background: #eee; border: 1px solid #ddd; margin-left: 15px; margin-bottom: 15px; }
 #toc td { font-size: 90%; }
-#toc td ul { list-style: none; margin: 0 0 9px 9px; }
+#toc td ul { list-style: none; margin: 0 0 0 9px; }
 
 
