--- a/site/app/views/opensource/download.html.haml
+++ b/site/app/views/opensource/download.html.haml
@@ -1,29 +1,38 @@
 :css
   .action-call { font-weight: bold; margin: 10px 0 10px; }
 
-- content_for :page_title, 'Under the Hood'
+- content_for :page_title, 'OpenShift Origins Source Code'
 
-%h1.ribbon Under the Hood
-%p OpenShift is made of many different Open Source software components working in harmony to power your apps.  The list below describes each component and links to the public GitHub repository.
+%h1.ribbon OpenShift Origins Source Code
+%p OpenShift runs on many different open source software components and we have made those publicly available under the OpenShift Origins project name.  The list below describes each component with links to the official GitHub repository.
 
 %section.row
   .span6
     %dl.larger
-      %dt.headline= link_to "Crank Case", "#{@openshift_github_url}/crankcase", :class => "external", :target => "_blank"
-      %dd User Management Component
-      %dt.headline= link_to "Gear Changer", "#{@openshift_github_url}/gearchanger", :class => "external", :target => "_blank"
-      %dd Short description to come
-      %dt.headline= link_to "RHC", "#{@openshift_github_url}/os-client-tools", :class => "external", :target => "_blank"
-      %dd Command-line client tools
-      %dt.headline= link_to "StickShift", "#{@openshift_github_url}//stickshift", :class => "external", :target => "_blank"
-      %dd Provides API
-      %dt.headline= link_to "SwingShift", "#{@openshift_github_url}/swingshift", :class => "external", :target => "_blank"
-      %dd Provides user authentication
-      %dt.headline= link_to "Uplift", "#{@openshift_github_url}/uplift", :class => "external", :target => "_blank"
-      %dd DNS Management component
+      %dt.headline= link_to "Server", crankcase_url, :class => "external", :target => "_blank"
+      %dd 
+        %p The server components that make up OpenShift Origins are collectively known as CrankCase. The source is divided into the following areas:
+        %dl
+          %dt.headline= link_to "StickShift", crankcase_url, :class => "external", :target => "_blank"
+          %dd Central service exposing a REST API for consumers and coordinating with the application container.
+          %dt.headline= link_to "GearChanger", crankcase_url, :class => "external", :target => "_blank"
+          %dd FIXME
+          %dt.headline= link_to "User Authentication", crankcase_url, :class => "external", :target => "_blank"
+          %dd A pluggable user authentication component with a default MongoDB implementation.
+          %dt.headline= link_to "Uplift", crankcase_url, :class => "external", :target => "_blank"
+          %dd DNS registration and management component.
 
-      %p
-        %em Coming soon &mdash; the OpenShift web console
+      %dt.headline= link_to "Command Line Client", client_tools_url, :class => "external", :target => "_blank"
+      %dd 
+        %p 
+          The command line program 
+          %code rhc
+          connects to OpenShift via our REST API and can be downloaded as a RubyGem.
+
+      %dt.headline Web Management Console
+      %dd
+        %p
+          %em Coming soon
 
   .span5.info-ribbon
     %h2 Test Drive
@@ -53,7 +62,7 @@
 
 %section.row
   .span12
-    %h3 Cartridges
+    %h3= link_to "Cartridges", crankcase_source_path_url('cartridges'), :class => "external", :target => "_blank"
     %p
       Cartridges enable new capabilities for applications by adding middleware components or enhancing other cartridges.
 
@@ -61,43 +70,44 @@
     %h5 Web Frameworks
     %ul.unstyled
       %li
-        = link_to "JBossAS Cartridge", "#{@openshift_cartridges_github_url}/jboss_cartridge", :class => "external", :target => "_blank"
+        = link_to "JBossAS Cartridge", crankcase_source_path_url('cartridges/jbossas-7'), :class => "external", :target => "_blank"
       %li
-        = link_to "Node.js Cartridge", "#{@openshift_cartridges_github_url}/node_js_cartridge", :class => "external", :target => "_blank"
+        = link_to "Node.js Cartridge", crankcase_source_path_url('cartridges/nodejs-0.6'), :class => "external", :target => "_blank"
       %li
-        = link_to "PHP Cartridge", "#{@openshift_cartridges_github_url}/php_cartidge", :class => "external", :target => "_blank"
+        = link_to "PHP Cartridge", crankcase_source_path_url('cartridges/php-5.3'), :class => "external", :target => "_blank"
       %li
-        = link_to "Perl Cartridge", "#{@openshift_cartridges_github_url}/perl_cartridge", :class => "external", :target => "_blank"
+        = link_to "Perl Cartridge", crankcase_source_path_url('cartridges/perl-5.10'), :class => "external", :target => "_blank"
       %li
-        = link_to "Python Cartridge", "#{@openshift_cartridges_github_url}/python_cartridge", :class => "external", :target => "_blank"
+        = link_to "Python Cartridge", crankcase_source_path_url('cartridges/python-3.2'), :class => "external", :target => "_blank"
       %li
-        = link_to "Ruby Cartridge", "#{@openshift_cartridges_github_url}/ruby_cartridge", :class => "external", :target => "_blank"
+        = link_to "Ruby Cartridge", crankcase_source_path_url('cartridges/ruby-1.1'), :class => "external", :target => "_blank"
   .span4.link-column
     %h5 Database and Related
     %ul.unstyled
       %li
-        = link_to "10Gen MMS Cartridge", "#{@openshift_cartridges_github_url}/10gen_mms_cartridge", :class => "external", :target => "_blank"
+        = link_to "10Gen MMS Cartridge", crankcase_source_path_url('cartridges/10gen-mms-agent-0.1'), :class => "external", :target => "_blank"
       %li
-        = link_to "MondgoDB Cartridge", "#{@openshift_cartridges_github_url}/mondgodb_cartridge", :class => "external", :target => "_blank"
+        = link_to "MondgoDB Cartridge", crankcase_source_path_url('cartridges/mongodb-2.0'), :class => "external", :target => "_blank"
       %li
-        = link_to "MySQL Cartridge", "#{@openshift_cartridges_github_url}/mysql_cartridge", :class => "external", :target => "_blank"
+        = link_to "MySQL Cartridge", crankcase_source_path_url('cartridges/mysql-5.1'), :class => "external", :target => "_blank"
       %li
-        = link_to "PHPMyAdmin Cartridge", "#{@openshift_cartridges_github_url}/phpmyadmin_cartridge", :class => "external", :target => "_blank"
+        = link_to "PHPMyAdmin Cartridge", crankcase_source_path_url('cartridges/phpmyadmin-3.4'), :class => "external", :target => "_blank"
       %li
-        = link_to "PostgreSQL Cartridge", "#{@openshift_cartridges_github_url}/postgresql_cartridge", :class => "external", :target => "_blank"
-      %li
-        = link_to "Rockmongo Cartridge", "#{@openshift_cartridges_github_url}/rockmongo_cartridge", :class => "external", :target => "_blank"
+        = link_to "PostgreSQL Cartridge", crankcase_source_path_url('cartridges/postgresql-8.4'), :class => "external", :target => "_blank"
+      -#%li
+        = link_to "Rockmongo Cartridge", crankcase_source_path_url('cartridges/rockmongo'), :class => "external", :target => "_blank"
   .span4.link-column
     %h5 Other Cartridges
     %ul.unstyled
       %li
-        = link_to "Cron Cartridge", "#{@openshift_cartridges_github_url}/cron_cartridge", :class => "external", :target => "_blank"
+        = link_to "Cron Cartridge", crankcase_source_path_url('cartridges/cron-1.4'), :class => "external", :target => "_blank"
       %li
-        = link_to "Jenkins Server Cartridge", "#{@openshift_cartridges_github_url}/jenkins_server_cartridge", :class => "external", :target => "_blank"
+        = link_to "Jenkins Server Cartridge", crankcase_source_path_url('cartridges/jenkins-1.4'), :class => "external", :target => "_blank"
       %li
-        = link_to "Jenkins Client Cartridge", "#{@openshift_cartridges_github_url}/jenkins_client_cartridge", :class => "external", :target => "_blank"
-      %li
-        = link_to "Metrics Cartridge", "#{@openshift_cartridges_github_url}/metrics_cartridge", :class => "external", :target => "_blank"
+        = link_to "Jenkins Client Cartridge", crankcase_source_path_url('cartridges/jenkins-client-1.4'), :class => "external", :target => "_blank"
+      -#%li
+        = link_to "Metrics Cartridge", crankcase_source_path_url('cartridges/metrics_cartridge'), :class => "external", :target => "_blank"
+
 %section.well
   %h2 Important Information
   %p
