--- a/site/app/views/product/index.html.haml
+++ b/site/app/views/product/index.html.haml
@@ -45,7 +45,7 @@
             %li
               = link_to opensource_community_url, :class => 'link-tile' do
                 %h4 OpenShift is Open Source
-                %p The components that power OpenShift are now available on GitHub and you can download our Fedora Remix image to try it out yourself.  Hit the Open Source page for the Open in OpenShift.
+                %p The components that power OpenShift are now available on GitHub and you can download our Fedora Remix image to try it out yourself.  The Open Source page has details on our process and how you can get involved.
             %li
               = link_to console_path, :class => 'link-tile' do
                 %h4 The console gets a makeover
@@ -53,7 +53,7 @@
             %li
               = link_to developers_url, :class => 'link-tile' do
                 %h4 Find answers in the Developer Center
-                %p Building applications involves lots of questions and we want you to find those answers fast.  The new Developer Center will centralize and organize your OpenShift life.
+                %p Building applications involves lots of questions and we want you to find those answers fast.  The new Developer Center will centralize and organize all our reference material.
 
       .row
         .span6
