--- a/site/app/views/cartridge_types/index.html.haml
+++ b/site/app/views/cartridge_types/index.html.haml
@@ -1,4 +1,7 @@
-%h1.invisible Add a New Cartidge
+- breadcrumb_for_application @application, 'Add a Cartridge'
+- content_for :page_title, 'Add a Cartridge'
+
+%h1.invisible Add a New Cartridge
 = cartridge_wizard_steps_create 0
 - if @framework.id == 'haproxy-1.4'
   .alert 
@@ -17,20 +20,20 @@
       .row
         - @carts.in_groups(2, false).each do |types|
           .span4
-            = render :collection => types, :partial => 'cartridge_types/cartridge_type'
+            = render :collection => types, :partial => 'cartridge_types/cartridge_type', :locals => {:application => @application}
 
 
   - unless @installed.empty? and @requires.empty? and @conflicts.empty? and @blocked.empty?
     .span4
       - unless @installed.empty?
         %h3 Installed
-        = render :collection => @installed, :partial => 'cartridge_types/cartridge_type', :locals => {:inactive => true, :reason => :installed}
+        = render :collection => @installed, :partial => 'cartridge_types/cartridge_type', :locals => {:application => @application, :inactive => true, :reason => :installed}
 
       - unless @requires.empty? and @conflicts.empty? and @blocked.empty?
         %h3 Has Dependencies
-        = render :collection => @requires, :partial => 'cartridge_types/cartridge_type', :locals => {:inactive => true, :reason => :requires}
-        = render :collection => @conflicts, :partial => 'cartridge_types/cartridge_type', :locals => {:inactive => true, :reason => :conflicts}
-        = render :collection => @blocked, :partial => 'cartridge_types/cartridge_type', :locals => {:inactive => true, :reason => :blocked}
+        = render :collection => @requires, :partial => 'cartridge_types/cartridge_type', :locals => {:application => @application, :inactive => true, :reason => :requires}
+        = render :collection => @conflicts, :partial => 'cartridge_types/cartridge_type', :locals => {:application => @application, :inactive => true, :reason => :conflicts}
+        = render :collection => @blocked, :partial => 'cartridge_types/cartridge_type', :locals => {:application => @application, :inactive => true, :reason => :blocked}
 
 - content_for :javascripts do
   :javascript
