--- a/site/app/views/cartridge_types/_cartridge_type.html.haml
+++ b/site/app/views/cartridge_types/_cartridge_type.html.haml
@@ -57,8 +57,8 @@
     - when :conflicts
       .warning Conflicts with #{cartridge_type.conflicts.join(',')}
     - when :blocked
-      .warning Cannot be added to #{@application.framework_name}
+      .warning Cannot be added to #{application.framework_name}
 
   - unless hide_link or inactive
-    = link_to "Select »", application_cartridge_type_path(@application_id, cartridge_type), :class => 'btn'
+    = link_to "Select »", application_cartridge_type_path(application, cartridge_type), :class => 'btn'
 
