--- a/site/app/views/cartridge_types/show.html.haml
+++ b/site/app/views/cartridge_types/show.html.haml
@@ -1,9 +1,12 @@
+- breadcrumb_for_application @application, 'Add a Cartridge'
+- content_for :page_title, 'Add a Cartridge'
+
 %h1.invisible Configure New Application
 = cartridge_wizard_steps_create 1
 
-= render :partial => @cartridge_type, :locals => {:hide_link => true, :extra_info => true}
+= render :partial => @cartridge_type, :locals => {:hide_link => true, :extra_info => true, :application => @application}
 
-= semantic_form_for @cartridge, :url => application_cartridges_path(@application_id), :html => {:class => 'form'} do |f|
+= semantic_form_for @cartridge, :url => application_cartridges_path(@application), :html => {:class => 'form'} do |f|
   = f.hidden_field :type, :value => @cartridge_type.type
   = f.hidden_field :name, :value => @cartridge_type.id
   = f.semantic_errors :name
@@ -13,6 +16,6 @@
       #{@cartridge_type.name}
     cartridge to your application?
   = f.buttons do
-    = link_to "Back", application_cartridge_types_path(@application_id), :class => 'btn'
+    = link_to "Back", application_cartridge_types_path(@application), :class => 'btn'
     = f.commit_button("Add Cartridge")
     = f.loading
